infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

    # ADD these for CORS local development 4200
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  rules:
    - host: redstore.zeroop.dev
      http:
        paths:
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 8080
          - path: /api/sellers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 8080
          - path: /api/admin/products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 8080
          - path: /api/currentuser
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 8080
          - path: /api/logout
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 8080
          - path: /api/product(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/brands(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/categories(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/seller(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srv
                port:
                  number: 8080
          - path: /api/inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-srv
                port:
                  number: 8080
          - path: /api/cart(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srv
                port:
                  number: 8080
          - path: /api/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-srv
                port:
                  number: 8080
          - path: /api/search(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-srv
                port:
                  number: 8080
          - path: /api/deals(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deal-srv
                port:
                  number: 8080
          - path: /api/payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-srv
                port:
                  number: 8080
          - path: /api/analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-srv
                port:
                  number: 8080
          - path: /redstore-main(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-primary-srv
                port:
                  number: 9000
          - path: /redstore-events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-primary-srv
                port:
                  number: 9000
          - path: /(.*) # Catch-all regex to push everything else to the client
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
